# tlm

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  static-analysis.yml
docs/: faq.md  index.md
docs/api/: config.md  types.md
docs/tutorials/quickstart/: index.ipynb
docs/tutorials/tlm_advanced/: index.ipynb
docs/tutorials/tlm_chat_completion/: index.ipynb
docs/tutorials/tlm_custom_eval/: index.ipynb
docs/tutorials/tlm_responses/: index.ipynb
docs/tutorials/tlm_structured_outputs/: index.ipynb
docs/tutorials/tlm_tool_calls/: index.ipynb
docs/use-cases/: eval-obs-integrations.md
docs/use-cases/instruction_tuning_data/: index.ipynb
docs/use-cases/tlm_agents/: index.ipynb
docs/use-cases/tlm_annotation/: index.ipynb
docs/use-cases/tlm_conversation/: index.ipynb
docs/use-cases/tlm_data_curation_for_reliable_rag/: index.ipynb
docs/use-cases/tlm_data_extraction/: index.ipynb
docs/use-cases/tlm_existing_agent/: index.ipynb
docs/use-cases/tlm_guardrails/: index.ipynb
docs/use-cases/tlm_langchain/: index.ipynb
docs/use-cases/tlm_openai_agents/: index.ipynb
docs/use-cases/tlm_rag/: index.ipynb
docs/use-cases/tlm_yes_no_decision/: index.ipynb
docs/use-cases/zero_shot_classification/: index.ipynb
notebooks/: score_prompt_examples.ipynb
tests/integration/: test_inference.py
tests/unit/templates/: test_semantic_evaluation_completion_template.py
tlm/: api.py  inference.py
tlm/components/: __init__.py  response_assembly.py  semantic_evaluation_score_generator.py
tlm/components/completions/: prompt_evaluation_completion_generator.py
tlm/components/scores/: trustworthiness_score_computation.py
tlm/config/: base.py  defaults.py  models.py  presets.py  provider.py  schema.py
tlm/pipeline/: factory.py
tlm/templates/: semantic_evaluation_completion_template.py
tlm/types/: __init__.py  base.py  completion_template.py
tlm/utils/: completion_utils.py  eval_utils.py  explainability_utils.py
tlm/utils/scoring/: semantic_evaluation_scoring_utils.py  trustworthiness_scoring_utils.py
