[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlm"
version = "0.0.0"
description = "Core functionality for TLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonpath-ng>=1.7.0",
    "litellm==1.71.3",
    "numpy>=2.1.3",
    "openai==1.87.0",
    "pandas>=2.0.0",
    "pandas-stubs>=2.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6.4",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-dotenv>=0.5.2",
    "pytest-profiling>=1.7.0",
    "pytest-recording>=0.13.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
# The maximum line length that the formatter will allow.
line-length = 120
# Ignore F401 (unused imports) for conftest.py files
per-file-ignores = {"**/conftest.py" = ["F401"]}

[tool.isort]
line_length = 120
profile = "black"

[tool.hatch.build.targets.wheel]
packages = ["tlm"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
